change pill thing to have fixed position when editing a file (and non-fixed otherwise); this will get rid of pointless scrollbars, which waste space and throw off calculations.

--- a/salvus/page/console.css
+++ b/salvus/page/console.css
@@ -12,14 +12,12 @@
 .salvus-console-topbar {
     padding: 0px;
     margin : 0px;
-    height : 30px;
+    height : 26px;
     overflow : hidden;
-    border-bottom : 1px solid #aaa;
 }
 
 .salvus-console-filename {
     padding       : 10px;
-    font-size     : 14pt;
     font-weight   : bold;
     overflow      : hidden;
     color:#555;
@@ -29,11 +27,10 @@
 
 .salvus-console-title {
     padding       : 10px;
-    font-size     : 14pt;
     font-weight   : bold;
     overflow      : hidden;
     color:#555;
-    max-width : 30%;
+    max-width : 40%;
     padding-top: 4px;
 }
 
